Feel free to add further stuff, as this was just a general write-down of some things. Better wikification appreciated.

--- a/Bugzilla%2FBug_report_guide.mw
+++ b/Bugzilla%2FBug_report_guide.mw
@@ -1,124 +1,30 @@
-<languages />
-<translate>
+This article should adress many things you should keep in mind to make other people's life easier, when filling a bug report. Always remember, that they care about your problems for free.
+== General information ==
+===  Creating a new bug ===
+'''Search for duplicates.''' Maybe someone else reported your problem, too?
 
-== Best practices == <!--T:2-->
+If there are no duplicates, create a new bug. 
 
-<!--T:3-->
-* '''Reread the text before submission''', the text cannot be edited afterwards. Also any text entered into a bug report will be usually e-mailed immediately to many people. Write in precise and clean language and avoid colloquial speech.  '''Hint:''' Imagine you have '''only one chance in your life''' to write this very important bug report. You know that the recipient can read English, but it is not his native language.
+You should always add information about your system configuration to the bug. To do so, create a new attachement and paste the content of
+{{emerge|--info}} 
+=== Adding information to another bug ===
+'''Always stay on topic.''' A bug tracker is used for technical reports and chitchat should be avoided. Keep them in the forums, irc or mailing-lists.
 
-<!--T:5-->
-* '''Search for duplicates''', before creating a new bug. 
+'''Only confirm the existance of a problem once.''' It does not help solving the problem, if you and another person report it twice. But if your and the confirmer's systems differ in a obviously way and that would be helpful to know, add this information.
 
-<!--T:7-->
-* '''Stay on topic''' - A bug ticket is used for technical reports and chitchat should be avoided. Keep them in the [https://www.gentoo.org/support/ support channels] (forums, IRC or mailing lists). 
-* '''Confirm the existence of a problem only once.''' - It does not help solving the problem, if you and another person report it twice. But if your and the confirmer's systems differ in an obvious way and that would be helpful to know, add this information. 
-* '''Open one bug ticket per topic''' - Usually this means not more than one package and one bug per ticket. If your problem is not discussed on a bug, search for one related to your issue or create a new report. Do not hijack bugs.
-* '''No talk on TRACKER bugs.''' - Those bugs are meta bugs. If you want to add useful information, add them to a related sub bug or create a new bug.
-* Optional: [[Foundation:Consultants|Gentoo consultants]] provide also '''commercial support''' for bugs and ebuilds.
-* [[Attach the logs to the bug ticket]] if the ticket is about problems during runtime or installation.
+'''Do not hijack other bugs.''' If your problem is not discussed on a bug, search for one related to your issue or create a new report.
 
-== Packages/ebuild == <!--T:8-->
+'''No talk on tracker bugs.''' Those bugs are meta bugs. If you want to add useful information, add them to a related sub bug or create a new bug.
 
-<!--T:9-->
-You should always add information about your system configuration to the bug. To do so, create a new attachment and paste the contents of:
+== Problems at build time == 
+== Problems at run time ==
+== Other bug reports ==
+=== Package XY was released in new version ===
+First: '''Calm down.'''
 
-<!--T:10-->
-{{Cmd|emerge --info > /tmp/emerge--info.txt}}
-
-=== Report a build-time bug (emerge failed) === <!--T:11-->
-
-<!--T:13-->
-[[File:Bugzilla screenshot summary-keyword.png|thumbnail|Use the '''Add an attachment''' button below the description text box in order to attach files in bugzilla.]]
-* First write the exact version of the package in the title of the bug report e.g. ''sys-apps/package-2.3-r4''
-* Add a short description to the title.
-* '''[[Attach the logs to the bug ticket]]'''
-
-=== Report a run-time bug === <!--T:14-->
-
-<!--T:15-->
-Files and information of interest ordered by priority:
-
-<!--T:16-->
-* The exact version of the package in the title of the bug report e.g. ''sys-apps/package-2.3-r4 crashes with error: Cannot proceed...''
-* Description of the problem, so that other can reproduce it:
-** How is the program run (on the console, in a terminal, as a daemon, in what runlevel etc.)
-** Any error output
-** What makes the program crash, behave wrong, not start
-** Is there a workaround?
-** What was the last working version of the package, if any?
-** What changed to make it not work?
-* '''[[Attach the logs to the bug ticket]]'''
-
-=== Report a version bump; a newer upstream release is available since a while === <!--T:17-->
-
-<!--T:41-->
-* Search Bugzilla before posting a bump request - is there already a bug open? '''Has the local Portage tree been synced lately'''; is it already in Portage? 
-* Avoid [[zero-day bump requests]] (wait at least '''48 hours''' after the release announcement)
-* Has it actually been '''released''' by upstream sources, '''or is it just marked''' in the source tree? Some projects mark a release in the tree long time before it is officially released.
-* Be sure to '''mention if it compiles and runs well on your arch'''. Any other helpful information you provide is most welcome.
-* Add a link to the upstream website
-* Give a link or list of fixed bugs or new features (sometimes called '''changelog''')
-* Write a '''summary''' in the form ''app-editors/vim-12.3.5 version bump''
-
-==== Optional ==== <!--T:21-->
-
-<!--T:42-->
-* Does a simple copy work, or does the ebuild need changes? (changed dependencies, obsolete patch files)
-* [[Package testing|Test the ebuild]] in a local overlay before submitting attachments
-* Provide patches for proposed ebuild edits, with optional explanation of changes (file name should match the new version number, not old)
-* Provide additional files (initd, unit files) as separate attachments (as needed)
-* Do not paste files directly into comments; [[Attach the logs to the bug ticket|use attachments.]]
-
-=== Request for a new package; ebuild request === <!--T:22-->
-
-<!--T:23-->
-If you request a new ebuild for a software to be added to portage, you must find or become a maintainer for the package.
-
-<!--T:24-->
-If a bug report already exists for the package, you can help the effort by keeping information about the package up to date. If you add a -VERSION component to the package atom, then this can be updated with new releases over time while the bug report remains unmaintained to show there is a continuing interest in seeing it integrated into the portage tree.
-
-<!--T:43-->
-If no bug report exists for the package, you can file a bug report under the '''Gentoo Linux''' project and the component '''New package'''.
-
-<!--T:44-->
-The '''Summary''' of your bug report should list a (preliminary) package atom ''category/package'', perhaps with a ''-VERSION'' suffix, followed by a canonical short description of the package (the DESCRIPTION variable in an ebuild). It is important to disambiguate the name of the new package: if upstream uses different names for the same software, perhaps an abbreviation as well as the full name, you should mention both (all) of these in the Summary so that other people can find bug reports about the same software. If several (groups of) people track different bug reports about virtually the same ebuild request, this will duplicate the effort of ebuild research and development, and will divide people who have a common interest.
-
-<!--T:45-->
-You should link to the upstream website (the HOMEPAGE variable in an ebuild) using the '''URL''' field. You should provide a list of features in the '''Description''' of the bug report. This may well be taken directly from the upstream website or from a manual or other documentation, and could be used later for the ''longdescription'' tag in metadata.xml.
-
-<!--T:46-->
-You can attach an ebuild and related files that should go into the portage tree directly to the bug report, or you can use the '''See also''' field to refer to a git [[Github Pull Requests|pull request]].
-
-<!--T:47-->
-You can help develop the package by setting up a [[Handbook:Parts/Portage/CustomTree#Defining_a_custom_repository|local overlay]] with your ebuilds, metadata, patches and other auxiliary files. If you need technical support with your ebuild development, many people would be glad to [https://www.gentoo.org/support/ help].
-
-=== Package XY should be marked stable === <!--T:25-->
-
-<!--T:26-->
-If a package is building and working without problems on the system for '''more than 30 days''' and it isn't yet marked as stable you can create a [[stable request]].
-
-== Kernel == <!--T:28-->
-
-<!--T:29-->
-Files and information of interest for kernel bug reports ordered by priority:
-
-<!--T:30-->
-* Which kernel and version is used, on what architecture e.g. ''gentoo-sources-3.4.2-r2'' on ''x86_64''
-* The kernel configuration file should be attached to the bug report ({{Path|/usr/src/linux/.config}})
-* A list of all devices in the system can be acquired with ''lspci -k''
-* Log files during kernel initialization should be attached ({{Path|/var/log/dmesg}} or {{Path|/var/log/messages}})
-
-<!--T:31-->
-{{Note|On request a [[kernel git-bisect]] could be done to identify bad patches.}}
-
-== See also == <!--T:34-->
-
-<!--T:35-->
-* {{See also|Bugzilla/Guide}}
-* {{See also|Contributing to Gentoo}}
-* {{See also|Gentoo GitHub}}
-* [https://bugs.gentoo.org/ Gentoo's Bugzilla site]
-
-</translate>
-
-[[Category:Project and Community]]
+So called zero-day requests (that means the bug report happened not later than 24 hours of the release announcement) should be avoided.
+=== Package XY should be marked stable ===
+* Did you test the version you want to become stable thoroughly?
+* Are there other bug reports regarding this bug?
+* Was the version of the package added to the tree since at least 30 days?
+* Are its dependencies all marked stable?
