Created page with "The fontconfig library is intended to provide uniform font selection and configuration amongst all GUI applications though it's common for various desktop environments to provide..."

--- a/Fontconfig.mw
+++ b/Fontconfig.mw
@@ -1,362 +1,28 @@
-<languages />
-{{InfoBox stack
-|{{InfoBox wikipedia|header=true}}
-|{{InfoBox homepage|http://www.freedesktop.org/wiki/Software/fontconfig/}}
-}}
-<translate>
-
-<!--T:1-->
-The {{c|fontconfig}} library ({{Package|media-libs/fontconfig}}) is intended to provide uniform font selection and configuration amongst all GUI applications. Although it is common for a [[desktop environment]] to provide its own font overrides and configuration utilities, {{c|fontconfig}} is still the underlying library.
-
-== Installing == <!--T:76-->
-
-<!--T:77-->
-When {{c|fontconfig}} is needed, it will almost certainly be installed already. If not, make sure to set up the graphical subsystem (i.e., [[X]] or [[Wayland]]) and [[desktop environment]] properly.
-
-=== USE flags === <!--T:78-->
-
-<!--T:79-->
-{{c|fontconfig}} doesn't know many USE flags.
-
-<!--T:80-->
-{{USEflag|package=media-libs/fontconfig}}
-
-== Configuration == <!--T:2-->
-
-<!--T:3-->
-{{Note|Changes to {{c|fontconfig}} files will reflect only in applications started after the change!}}
-
-=== Generic === <!--T:4-->
-
-<!--T:5-->
-{{c|fontconfig}} uses XML files in the {{Path|/etc/fonts/}} directory to generate its internal configuration. By default it parses {{Path|/etc/fonts/fonts.conf}} (users should not edit this file!) which sets some sane defaults and usually contains code to also parse {{Path|/etc/fonts/conf.d/}} content. In addition there is the {{Path|/etc/fonts/conf.avail/}} directory that contains various possible configuration files that each cover some aspect of {{c|fontconfig}}. It's customary to symlink necessary files to {{Path|/etc/fonts/conf.d/}}. These files are executed in order they are named; for this reason their names start with a two digit number with the first digit (tens) indicating what the file affects (called the class).
-
-=== Gentoo specific === <!--T:6-->
-
-<!--T:7-->
-Gentoo ships an [[eselect]] module ({{c|eselect fontconfig}}) that does exactly what was described in generic way - it manages symlinks of files in {{Path|/etc/fonts/conf.avail/}} by adding or removing them from the {{Path|/etc/fonts/conf.d/}} directory. For obvious reasons changing system wide configuration requires appropriate permissions.
-
-<!--T:8-->
-The following subsections explain how to deal with the {{c|fontconfig}} eselect module.
-
-==== Listing available files ==== <!--T:9-->
-
-<!--T:10-->
-The {{c|list}} command shows the available {{c|fontconfig}} files, and marks the enabled ones with an asterisk (<code>*</code>).
-
-<!--T:11-->
-{{RootCmd|eselect fontconfig list
-|output=<pre>
-Available fontconfig .conf files (* is enabled):
-  [1]   10-autohint.conf *
-  [2]   10-no-sub-pixel.conf
-  [3]   10-sub-pixel-bgr.conf
-  [4]   10-sub-pixel-rgb.conf
-  [5]   10-sub-pixel-vbgr.conf
-  [6]   10-sub-pixel-vrgb.conf
-  [7]   10-unhinted.conf
-  [8]   11-lcdfilter-default.conf
-  [9]   11-lcdfilter-legacy.conf
-  ...
-</pre>}}
-
-<!--T:12-->
-{{Warning|Different systems have different files in {{Path|fonts.avail}} so the output ''will'' be different. Never blindly use a list number from another source (such as blog posts or wiki articles).}}
-
-==== Enabling a file ==== <!--T:13-->
-
-<!--T:14-->
-Files can be enabled either by filename or by the number in brackets. These two do the same thing:
-
-<!--T:15-->
-{{RootCmd
-|eselect fontconfig enable 10-sub-pixel-rgb.conf
-|eselect fontconfig enable 4
-}}
-
-==== Disabling a file ==== <!--T:16-->
-
-<!--T:17-->
-Files can be disabled likewise:
-
-<!--T:18-->
-{{RootCmd
-|eselect fontconfig disable 10-sub-pixel-rgb.conf
-|eselect fontconfig disable 4
-}}
-
-=== Custom system wide configuration === <!--T:19-->
-
-<!--T:20-->
-To create a custom, system-wide {{c|fontconfig}} file, enable {{Path|51-local.conf}} and create {{Path|/etc/fonts/local.conf}} (this is an XML file).
-
-<!--T:21-->
-{{FileBox|filename=/etc/fonts/local.conf|title=Example file that sets preferred font fallback order for sans-serif font|lang=xml|1=
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
-<fontconfig>
-  <alias>
-    <family>sans-serif</family>
-    <prefer>
-      <family>Ubuntu</family>
-      <family>TakaoPGothic</family>
-      <family>Droid Sans</family>
-    </prefer>
-    <default><family>DejaVu Sans</family></default>
-  </alias>
-</fontconfig>
-}}
-
-<!--T:81-->
-To be clear, this says that when it comes to sans-serif fonts, we ''prefer'' using Ubuntu, TakaoPGothic, and Droid Sans fonts (in that order) over DejaVu Sans (which can be used as a ''default'' choice only when necessary). Obviously, different choices can be made here.
-
-=== Per-user configuration === <!--T:22-->
-
-<!--T:23-->
-To create per-user {{c|fontconfig}} files, enable {{Path|50-user.conf}} (which might be enabled by default), and have the end users use the {{Path|~/.config/fontconfig/fonts.conf}} file. This file has the same XML format as {{Path|local.conf}}.
-
-<!--T:24-->
-{{Note|This is one way how a desktop environment might try to affect font rendering. It might be prudent to disable this to be sure that what's being shown is actually system wide configuration when customizing it. Disabling it also makes font rendering more uniform across user accounts.}}
-
-<!--T:75-->
-{{Note|The previously used {{Path|~/.fonts.conf}} is now deprecated in favor of the <var>$XDG_CONFIG_HOME</var> based location. This variable by defaults points to {{Path|~/.config}}.}}
-
-=== Checking configuration === <!--T:25-->
-
-<!--T:26-->
-Check the default font replacement, for example for Arial, by typing:
-
-<!--T:27-->
-{{Cmd|fc-match Arial}}
-
-== Anti-aliasing, hinting, and sub-pixel rendering == <!--T:28-->
-
-<!--T:29-->
-Rendering aspects can be tuned as well. In the following sections the ''Anti-aliasing'', ''Hinting'' and ''Sub-pixel rendering'' features are tuned.
-
-<!--T:30-->
-{| class="table table-striped table-condensed"
-|-
-! scope="col" width="25%" | Feature
-! Description
-|-
-| Anti-aliasing
-| is enabled by default and makes fonts less blocky.
-|-
-| Hinting
-| is an attempt to cope with the low pixel count per unit of area of current displays. Correct hinting makes characters more crisp but since font metrics aren't changed (and arguably should not change) affects how overall the rendered text looks like.
-|-
-| Sub-pixel rendering
-| uses the fact that LCD matrix has three primaries to effectively triple the resolution of text but can make characters appear not entirely black. To combat that {{c|lcdfilter}} is to be used with sub-pixel rendering (available for newer {{c|fontconfig}}) but it can blur the characters too much. In the end this entirely depends on person how they like their text.
-|}
-
-=== Forcing hinting === <!--T:31-->
-
-<!--T:32-->
-The default {{c|fontconfig}} behavior regarding hinting is rather undocumented, but it can be made deterministically sub-optimal by making a system wide default.
-
-<!--T:33-->
-# [[#Custom system wide configuration|First enable {{Path|/etc/fonts/local.conf}}]]
-# Edit the {{Path|local.conf}} file to include full hinting by default 
-
-<!--T:34-->
-This {{Path|local.conf}} snippet enables full hinting:
-
-<!--T:35-->
-{{FileBox|filename=/etc/fonts/local.conf|title=Setting hinting to full|lang=xml|1=
-<match target="font">
-  <edit mode="assign" name="hintstyle">
-    <const>hintfull</const>
-  </edit>
-</match>
-}}
-
-<!--T:36-->
-{{Note|Most fonts look best with full hinting but others need slight or more rarely some other other hinting option. Some fonts for one reason or another will always be ugly.}}
-
-=== Using sub-pixel rendering === <!--T:37-->
-
-<!--T:38-->
-It's important to determine the sub-pixel layout of the LCD matrix. It's usually RGB ({{Path|10-sub-pixel-rgb.conf}}) but the only way to be sure is to either consult display specification or use this [http://www.lagom.nl/lcd-test/subpixel.php sub-pixel layout test] to determine it.
-
-<!--T:39-->
-Once determined, enable the appropriate {{Path|10-sub-pixel-''<matrix type>''.conf}} file.
-
-<!--T:40-->
-{{RootCmd|eselect fontconfig enable 10-sub-pixel-rgb.conf}}
-
-<!--T:41-->
-It's strongly advised that {{c|lcdfilter}}, if available, is used with sub-pixel rendering. It comes in different varieties but the default ({{Path|11-lcdfilter-default.conf}}) should be appropriate for all common fonts.
-
-<!--T:42-->
-{{RootCmd|eselect fontconfig enable 11-lcdfilter-default.conf}}
-
-<!--T:43-->
-{{Warning|The <code>bindist</code> USE flag in {{Package|media-libs/freetype}} disables sub-pixel rendering altogether due to potential patenting issues. In order to use sub-pixel rendering, the USE flag must be disabled (i.e., <code>-bindist</code>) for this package.}}
-
-=== Regarding autohinter === <!--T:44-->
-
-<!--T:45-->
-Autohinter attempts to do automatic hinting disregarding any existing hinting information. Until recently it was the default because TrueType2 was covered by patents but now that they have expired there's very little reason to use it. From technical point of view it does better than broken or no hinting information but it will be strongly sub-optimal for fonts with good hinting information. Generally system fonts are of the second kind so autohinter should not be used.
-
-<!--T:46-->
-{{Warning|Autohinter is not compatible with sub-pixel rendering, do not use the two together!}}
-
-== Infinality == <!--T:47-->
-
-<!--T:48-->
-Infinality is a (somewhat controversial) set of patches for FreeType and accompanying {{c|fontconfig}} files. The goal of Infinality is to provide higher quality font rendering including emulation of other OS font rendering styles.
-
-<!--T:49-->
-{{Note|As usual with software still in development it is prudent to always use only the latest version available unless there are known problems with it.}}
-
-=== Enabling Infinality === <!--T:50-->
-
-<!--T:51-->
-Enable the 'infinality' USE flag by editing {{Path|make.conf}} either manually or by using the {{c|[[euse]]}} tool.
-
-<!--T:52-->
-{{RootCmd|euse -E infinality}}
-
-<!--T:54-->
-Next, rebuild the affected programs.
-
-<!--T:55-->
-{{Emerge|params+=-uvDU|@world}}
-
-<!--T:56-->
-Unless messages shown after rebuild tell otherwise, enable {{Path|52-infinality.conf}}.
-
-<!--T:57-->
-{{RootCmd|eselect fontconfig enable 52-infinality.conf}}
-
-=== Configuring Infinality === <!--T:58-->
-
-<!--T:59-->
-Infinality can be configured in various ways including custom configurations, but easiest is to use pre-made profiles shipped in {{Package|media-libs/fontconfig-infinality}} that along with eselect modules should have been installed as dependencies of the <code>infinality</code> USE flag.
-
-==== Quick and reasonable config ==== <!--T:60-->
-
-<!--T:61-->
-{{RootCmd|eselect infinality set infinality
-|eselect lcdfilter set infinality}}
-
-<!--T:62-->
-{{Note|As always, {{c|fontconfig}} changes affect only applications started after changes have been made.}}
-
-<!--T:63-->
-It's also recommended to disable all {{c|fontconfig}} settings except for {{Path|52-infinality.conf}} as they interfere with the rendering of infinality styles:
-
-<!--T:64-->
-{{RootCmd|eselect fontconfig disable <number>}}
-
-<!--T:65-->
-Certain {{c|fontconfig}} settings do not interfere with how the fonts are rendered, but rather determine the default fonts for font-types (such as Monospace, sans-serif, etc.). Such settings (for example the {{Path|62-croscore-*.conf}} configurations) can be left enabled.
-
-==== Explanation ==== <!--T:66-->
-
-<!--T:67-->
-Infinality provides FreeType environment variables that can be used to configure features introduced with its patches as well as {{c|fontconfig}} files to be used with these changes. {{c|fontconfig}} file sets are administrated on Gentoo via {{c|eselect infinality}} while the FreeType behaviour is set using {{c|eselect lcdfilter}}.
-
-<!--T:68-->
-These eselect modules function as usual:
-
-<!--T:69-->
-* Listing available {{c|fontconfig}} file sets.
-: {{RootCmd|eselect infinality list}}
-* Listing available FreeType variable sets.
-: {{RootCmd|eselect lcdfilter list}}
-* Both sets should match of course except when there are multiple matches possible such as shown below.
-: {{RootCmd|eselect infinality set win7|eselect lcdfilter set windows-7-light}}
-
-== Picking fonts == <!--T:70-->
-
-<!--T:71-->
-Choosing the right font can be trickier than deciding on the right hinting type. For one reason or another, some fonts will never be perfect — but it's certainly possible to make them look better than, say, the Windows 7 default font configuration. 
-
-<!--T:82-->
-Here are some recommendations regarding well known fonts in Gentoo:
-</translate>
-
-{| class="table table-striped table-condensed"
-|-
-! scope="col" width="25%" |<translate><!--T:83-->
-Font family</translate>
-! <translate><!--T:84-->
-Pros</translate>
-! <translate><!--T:85-->
-Cons</translate>
-|-
-|Liberation<br />{{Package|media-fonts/liberation-fonts}}
-| <translate><!--T:86-->
-[[Wikipedia:Red Hat|Red Hat's]] fonts, which are metric-compatible with MS TrueType [[Wikipedia:Corefonts|corefonts]], have a decent, modern look. This is the [[Project:Fonts|Gentoo Fonts team]] recommendation for default Latin fonts. Covers about 2,600 code points.</translate>
-| <translate><!--T:87-->
-Latin, Greek, Cyrillic, and Hebrew only. A few glyphs may have hinting trouble.</translate>
-|-
-|Linux Libertine<br />{{Package|media-fonts/libertine}}
-| <translate><!--T:88-->
-Very similar to Liberation, covering about 2,700 code points. Linux Libertine itself is proportional serif only, but the package contains less extensive sans and mono fonts, as well. Can be used as a fallback for some glyphs not in Liberation.</translate>
-| <translate><!--T:89-->
-Latin, Greek, Cyrillic, and Hebrew only. Sans and mono fonts are limited.</translate>
-|-
-|Noto<br />{{Package|media-fonts/noto}}
-| <translate><!--T:90-->
-Google's font family that aims to support all the world's languages (so, well over 60,000 code points). It goes well with Liberation or Droid. Adobe's Source Han Sans fonts are included for [[Wikipedia:CJK|CJK]]. Recommended as a fallback for many glyphs not covered by Liberation.</translate>
-| <translate><!--T:91-->
-Big download.</translate>
-|-
-|DejaVu<br />{{Package|media-fonts/dejavu}}
-| <translate><!--T:92-->
-Many styles and covers a lot of code points (about 6,100 for sans).</translate>
-| <translate><!--T:93-->
-Exceptionally wide — even condensed is wider than same-height monospace. Overall second to [[Wikipedia:Verdana|Verdana]] (an MS font) in width. Sans-serif font is only average.</translate>
-|-
-|Droid<br />{{Package|media-fonts/droid}}
-| <translate><!--T:94-->
-Covers a lot of code points and scripts.</translate>
-| <translate><!--T:95-->
-Very dry, wide yet thin glyphs. Clearly designed with handheld devices and their small screens in mind.</translate>
-|-
-|Gentium Plus<br />{{Package|media-fonts/sil-gentium}}
-| <translate><!--T:96-->
-Fairly distinctive; might appeal to people who like narrow fonts.</translate>
-| <translate><!--T:97-->
-Serif only. As with other [[Wikipedia:SIL International|SIL]] fonts, the hinting is questionable.</translate>
-|-
-|Ubuntu<br />{{Package|media-fonts/ubuntu-font-family}}
-| <translate><!--T:98-->
-Used in [[Wikipedia:Ubuntu (operating system)|Ubuntu]] (obviously). A distinctive font family with a style which might not appeal to everyone. Overall looks good and covers a fair number of code points.</translate>
-| <translate><!--T:99-->
-Only the sans-serif font is truly polished; narrow and monospaced versions are unfinished. No known serif font that would accompany it well.</translate>
-|-
-|URW<br />{{Package|media-fonts/urw-fonts}}
-| <translate><!--T:100-->
-Metric compatible with popular Adobe fonts (among others?).</translate>
-| <translate><!--T:101-->
-Seem to require slight hinting.</translate>
-|-<!--Keep these below the open-source fonts.-->
-|MS TrueType corefonts<br />{{Package|media-fonts/corefonts}}
-| <translate><!--T:102-->
-Includes most fonts used in documents and on the web.</translate>
-| <translate><!--T:103-->
-MS does not distribute them nowadays, so the available fonts are from many years ago and do not reflect their current state (not to mention the state of the art). Obviously, lacks fonts introduced more recently. Require full hinting.</translate>
-|-<!--Always keep this entry at the bottom as the only reason it's included is to warn people against using it!-->
-|Unifont<br />{{Package|media-fonts/unifont}}
-| <translate><!--T:104-->
-Covers a lot of code points.</translate>
-| <translate><!--T:105-->
-In addition to being ''ugly as sin'', it also fails some basic requirements to be considered a typeface. Is it sans-serif? Is it serif? ''Please never use this.''</translate>
-|}
-
-<translate>
-== External resources == <!--T:73-->
-
-<!--T:74-->
-* In-depth articles from Arch Linux wiki on:
-** [https://wiki.archlinux.org/index.php/Font_configuration Font configuration]
-** [https://wiki.archlinux.org/index.php/Infinality Infinality]
-* [http://freedesktop.org/software/fontconfig/fontconfig-user.html Official {{c|fontconfig}} documentation for users]
-* [[Wikipedia:Hinting|Wikipedia article on font hinting]]
-
-</translate>
-[[Category:Fonts]]
+The fontconfig library is intended to provide uniform font selection and configuration amongst all GUI applications though it's common for various desktop environments to provide their own font overrides and configuration, still fontconfig is the underlying library even then.
+== Configuration ==
+{Note|Changes to fontconfig files will reflect only in applications started after the change!}
+=== Generic ===
+fontconfig uses XML files in ''/etc/fonts/'' directory to generate its internal configuration. By default it parses ''/etc/fonts/fonts.conf'' (users should not edit this file!) which sets some sane defaults and usually contains code to also parse ''/etc/fonts/conf.d/'' content. In addition there is ''/etc/fonts/conf.avail/'' directory that contains various possible configuration files that each cover some aspect of fontconfig. It's customary to symlink necessary files to ''/etc/fonts/conf.d/''. These files are executed in order they are named, for this reason their names start with a two digit number with the first (tens`) indicating class, that is, what the file affects.
+=== Gentoo specific way ===
+Gentoo ships an eselect module ('''eselect fontconfig''') that does exactly what was described in generic way - it manages symlinks of files in ''/etc/fonts/conf.avail/'' by adding or removing them from the ''/etc/fonts/conf.d/'' directory. For obvious reasons changing system wide configuration requires appropriate permissions.
+==== Listing available files ====
+'''eselect fontconfig list'''
+==== Enabling a file ====
+'''eselect fontconfig enable <filename> OR <number in the list output (not the number from filename!)>'''
+==== Disabling a file ====
+'''eselect fontconfig disable <filename> OR <number in the list output (not the number from filename!)>'''
+=== Custom system wide configuration ===
+Enable ''51-local.conf'' and create ''/etc/fonts/local.conf'' (this is an XML file, you have been warned).
+TODO put an example of that horror
+=== Per-user configuration ===
+Enable ''50-user.conf'' (possibly enabled by default). And use ''~/.fonts.conf'' (same format as ''local.conf'')
+{Note|This is one way how a desktop environment might try to affect font rendering hence it might be prudent to disable this to be sure that what's being shown is actually system wide configuration when customizing it. Disabling it also makes font rendering more uniform across user accounts}.
+== Anti-aliasing, hinting and sub-pixel rendering ==
+'''Anti-aliasing''' is enabled by default and makes fonts less blocky.
+'''Hinting''' is an attempt to cope with the low pixel count per unit of area of current displays.Correct hinting makes characters more crisp but since font metrics aren't changed (and arguably should not change) affects how overall the rendered text looks like.
+'''Sub-pixel rendering''' uses the fact that LCD matrix has three primaries to effectively triple the resolution of text but can make characters appear not entirely black. To combat that '''lcdfilter''' is to be used with sub-pixel rendering (available for newer fontconfig) but it can blur the characters too much. In the end this entirely depends on person how they like their text.
+=== Using sub-pixel rendering ===
+It`s important to determine the sub-pixel layout of the LCD matrix. It`s usually RGB (''10-sub-pixel-rgb.conf'') but the only way to be sure is to either consult display spcification or use this [http://www.lagom.nl/lcd-test/subpixel.php|sub-pixel layout test] to determine it. It`s strongly advised that lcdfilter, if available, is used with sub-pixel rendering. It comes in different varieties but the default (''11-lcdfilter-default.conf'') should be appropriate for all common fonts.
+== Further reading ==
+* [https://wiki.archlinux.org/index.php/Font_Configuration|Arch Linux Wiki on this topix] - an in-depth article on Linux font configuration and font selection
+* [http://en.wikipedia.org/wiki/Hinting|Wikipedia article on font hinting]
