Created page with "The '''dispatch-conf''' utility is used on Gentoo to manage configuration file updates. It allows the user to review (and accept) changes on the files and integrates with '''rcs'..."

--- a/Dispatch-conf.mw
+++ b/Dispatch-conf.mw
@@ -1,30 +1,18 @@
-{{Lowercase title}}
+The '''dispatch-conf''' utility is used on Gentoo to manage configuration file updates. It allows the user to review (and accept) changes on the files and integrates with '''rcs''' to allow for version-controlled configuration file management.
 
-The {{c|dispatch-conf}} [[Article description::a utility is included with [[Portage]] and is used on Gentoo to manage configuration file updates.]] It allows system administrators to review then accept or reject upstream configuration changes, which frequently happens when packages are updated. It is capable of integrating with {{c|rcs}} to allow for version-controlled configuration file management.
+== Feature: RCS Integration ==
 
-== RCS (revision control system) integration ==
+When '''dispatch-conf''' is configured to integrate with '''rcs''', it will store all changes in {{Path|/etc/config-archive}}. 
 
-When {{c|dispatch-conf}} is configured to integrate with {{c|rcs}}, it will store all changes in {{Path|/etc/config-archive}}.
-
-Install revision control system:
-
-{{Emerge|dev-vcs/rcs}}
-
-This process of configuration is as simple as editing the configuration file to include the following:
-
-{{FileBox|filename=/etc/dispatch-conf.conf|lang=bash|1=
-use-rcs=yes
-}}
-
-Administrators can then view the differences using the {{c|rcs}} utilities like {{c|rlog}} as well as roll-back changes using {{c|co}}. The {{c|rcs}} utilities work with file locking itself, so the moment you want to use it in your administrative tasks, understand that:
-
-* {{c|dispatch-conf}} only stores the changes made when the package suggests to alter the file. Changes you made afterwards are ''not'' registered yet
-* when you check out a file, {{c|rcs}} will want to write the file to the file system, so make sure you backup your existing file first, or work with standard output (see later)
+Administrators can then view the differences using the '''rcs''' utilities like '''rlog''' as well as roll-back changes using '''co'''. The '''rcs''' utilities work with file locking itself, so the moment you want to use it in your administrative tasks, understand that:
+* '''dispatch-conf''' only stores the changes made when the package suggests to alter the file. Changes you made afterwards are ''not'' registered yet
+* when you check out a file, '''rcs''' will want to write the file to the file system, so make sure you backup your existing file first, or work with standard output (see later)
 * if you want to check in a file, you first need to take a lock on said file. Also, make sure you opt not to remove the working file
 
 To view the commit history on {{Path|/etc/conf.d/udev}}:
 
 {{Cmd|rlog /etc/config-archive/etc/conf.d/udev,v|output=<pre>
+
 RCS file: /etc/config-archive/etc/conf.d/udev,v
 Working file: udev
 head: 1.1
@@ -45,19 +33,18 @@ dispatch-conf update.
 revision 1.1.1.1
 date: 2011/06/15 18:14:59;  author: root;  state: Exp;  lines: +3 -2
 dispatch-conf update.
-=============================================================================
-</pre>}}
+=============================================================================</pre>
+}}
 
 If you want to roll back to a particular version, a simple way to do so is to check out a previous version:
 
 {{RootCmd|cp udev udev.orig
-|co -p -r1.1.1.1 /etc/config-archive/etc/conf.d/udev,v > udev
-|output=<pre>
+|co -p -r1.1.1.1 /etc/config-archive/etc/conf.d/udev,v > udev|output=<pre>
 etc/config-archive/etc/conf.d/udev,v  -->  standard output
-revision 1.1.1.
-</pre>}}
+revision 1.1.1.</pre>
+}}
 
-After making your final changes (you can use the backup {{Path|udev.orig}} to merge any changes made later), check in the file again:
+After making your final changes (you can use the backup {{Path|udev.orig}} to merge any changes made later), check in the file again.
 
 {{RootCmd|co -p -l /etc/config-archive/etc/conf.d/udev,v}}
 
@@ -69,73 +56,5 @@ new revision: 1.2; previous revision: 1.1
 enter log message, terminated with single '.' or end of file:
 >> Merged changes for persistant rules
 >> .
-done
-</pre>}}
-
-== Changing diff or merge tools ==
-
-===Color diff output===
-Reading changes in all grey text can be a bit annoying. Fortunately, modern versions of {{Package|sys-apps/diffutils}} have a <code>--color</code> switch, which displays the different types of changes in different colors. Configuration is simple - change the diff line in the config file to:
-
-{{FileBox|filename=/etc/dispatch-conf.conf|lang=bash|1=
-diff="diff --color=always -Nu '%s' '%s'"
+done</pre>
 }}
-
-Alternatively, the package {{Package|app-misc/colordiff}} can be used. Install colordiff with:
-
-{{Emerge|app-misc/colordiff}}
-
-Then change the config to use it:
-
-{{FileBox|filename=/etc/dispatch-conf.conf|lang=bash|1=
-diff="colordiff -Nu '%s' '%s'"
-}}
-
-===Use (g)vimdiff to merge changes===
-
-You may wish to try (g)vimdiff instead of the default method of merging files. To do this, modify the {{Path|/etc/dispatch-conf.conf}} configuration file by changing the merge line:
-
-{{FileBox|filename=/etc/dispatch-conf.conf|lang=bash|1=
-merge="vimdiff -c'saveas %s' -c next -c'setlocal noma readonly' -c prev %s %s"
-}}
-
-You can also use vimdiff (for gvimdiff use <code>-f</code> option moreover) to merge changes. If you want to use neovim, replace <code>%s %s</code> at the end with <code>-d %s %s</code>
-
-{{Note|The left pane will hold the original config file saved as the merge output, so make changes in the left pane and save that pane. To help you remember the right hand pane (containing the new config file) will be marked unmodifiable and read-only.}}
-
-Some useful commands related to merge with vimdiff:
-
-<pre>
-"]c" : jump to next change
-"[c" : jump to previous change
-"CTRL-W <Right>" or "CTRL-W <Left>" : go to the other window
-"do" (diff obtain): get the text of the highlighted block from the other window
-"dp" (diff put) : put the text of the highlighted block to the other window
-"zo" : open fold under the cursor
-"zc" : close fold under the cursor
-"zr" : open all folds
-":wqa" : write and exit
-</pre>
-
-See the Vim documentation for further help.
-
-=== Using imediff2 to merge changes ===
-
-Another merge alternative is {{Package|dev-util/imediff2}}.  This simple tool allows using just a few keys to toggle between options.  Primarily, this is done through the {{Key|a}} or {{Key|b}} keys.  Also, the {{Key|e}} key will open the user's favorite editor set by the <var>EDITOR</var> shell variable for manual merging.
-
-To use with dispatch-conf, first install imediff2:
-
-{{Emerge|dev-util/imediff2}}
-
-Then, configure {{Path|/etc/dispatch-conf.conf}}:
-
-{{FileBox|filename=/etc/dispatch-conf.conf|lang=ini|1=
-merge="imediff2 -c -N --output='%s' '%s' '%s'"}}
-
-== See also ==
-
-* [[Handbook:AMD64/Portage/Tools#etc-update|etc-update]]
-* {{See also|Cfg-update}}
-
-[[Category:Portage tools]]
-[[Category:Portage]]
